--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -5,7 +5,7 @@ nav {
   box-shadow: 2px 0 5px #82204a;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   padding: 0 20px;
 
   & div {
