--- a/src/app/menu/[user]/styles.scss
+++ b/src/app/menu/[user]/styles.scss
@@ -1,9 +1,9 @@
-section {
+.menu {
   background-color: #638c26;
   color: #eff7ff;
   text-shadow: 0px 0px 6px #82204a;
   width: 40vw;
-  height: 60vh;
+  height: 70vh;
   border-radius: 2%;
   display: flex;
   flex-direction: column;
@@ -20,7 +20,7 @@ section {
 
     & > div {
       gap: 1vh;
-      margin: 4vh;
+      margin: 2vh;
       display: flex;
       flex-direction: column;
 
@@ -60,6 +60,7 @@ button {
   align-items: center;
   border-radius: 5px;
   transition: 0.5s;
+  margin-top: 4vh;
 
   &:hover {
     cursor: pointer;
