--- a/src/app/end/[user]/styles.scss
+++ b/src/app/end/[user]/styles.scss
@@ -2,6 +2,7 @@
   background-color: #82204a;
   color: #eff7ff;
   text-shadow: 0px 0px 6px #638c26;
+  box-shadow: 0 0 10px #9f86c0;
   width: 40vw;
   height: 50vh;
   border-radius: 2%;
