--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,8 +12,17 @@ body {
 }
 
 main {
-  height: 95vh;
+  height: 90vh;
+  width: 90vw;
+  margin: 2.5vh 5vw;
+  border: 5px solid #638c26;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px inset #9f86c0;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.dark {
+  background-color: #231123;
 }
