--- a/src/app/menu/[user]/styles.scss
+++ b/src/app/menu/[user]/styles.scss
@@ -1,5 +1,6 @@
 .menu {
   background-color: #638c26;
+  box-shadow: 0 0 10px #9f86c0;
   color: #eff7ff;
   text-shadow: 0px 0px 6px #82204a;
   width: 40vw;
