Added win screen

--- a/src/app/win/[user]/styles.scss
+++ b/src/app/win/[user]/styles.scss
@@ -1,10 +1,10 @@
-.end {
-  background-color: #82204a;
+.win {
+  background-color: #9f86c0;
   color: #eff7ff;
   text-shadow: 0px 0px 6px #638c26;
-  box-shadow: 0 0 20px #9f86c0;
+  box-shadow: 0 0 20px #82204a;
   border: 5px solid #eff7ff;
-  outline: 3px solid #82204a;
+  outline: 3px solid #9f86c0;
   width: 40vw;
   height: 50vh;
   border-radius: 10px;
