--- a/src/app/game/[user]/styles.scss
+++ b/src/app/game/[user]/styles.scss
@@ -1,6 +1,8 @@
 section {
   background-color: #638c26;
-  box-shadow: 0 0 10px #9f86c0;
+  box-shadow: 0 0 20px #9f86c0;
+  border: 5px solid #eff7ff;
+  outline: 3px solid #638c26;
   color: #eff7ff;
   text-shadow: 0px 0px 6px #82204a;
   width: 85vw;
@@ -48,7 +50,7 @@ section {
 .board {
   display: flex;
   flex-direction: column;
-  border: 2px solid black;
+  border: 2px solid #231123;
 }
 
 .row {
@@ -58,17 +60,18 @@ section {
     width: calc(6vmin / var(--size));
     height: calc(6vmin / var(--size));
     margin: 0 1px;
+    outline: 1px solid #9f86c0;
   }
 }
 
 .tile {
-  border: 1px solid black;
+  background-color: #231123;
 }
 
 .snake {
-  background-color: green;
+  background-color: #638c26;
 }
 
 .apple {
-  background-color: red;
+  background-color: #82204a;
 }
