--- a/src/app/login.scss
+++ b/src/app/login.scss
@@ -2,6 +2,9 @@ section {
   background-color: #638c26;
   color: #eff7ff;
   text-shadow: 0px 0px 6px #82204a;
+  box-shadow: 0 0 20px #9f86c0;
+  border: 5px solid #eff7ff;
+  outline: 3px solid #638c26;
   width: 30vw;
   height: 40vh;
   border-radius: 2%;
