--- a/src/app/menu/[user]/styles.scss
+++ b/src/app/menu/[user]/styles.scss
@@ -1,10 +1,12 @@
 .menu {
   background-color: #638c26;
-  box-shadow: 0 0 10px #9f86c0;
+  box-shadow: 0 0 20px #9f86c0;
+  border: 5px solid #eff7ff;
+  outline: 3px solid #638c26;
   color: #eff7ff;
   text-shadow: 0px 0px 6px #82204a;
-  width: 40vw;
-  height: 70vh;
+  width: 70vw;
+  height: 80vh;
   border-radius: 2%;
   display: flex;
   flex-direction: column;
