--- a/src/app/start/[user]/styles.scss
+++ b/src/app/start/[user]/styles.scss
@@ -1,7 +1,9 @@
 .start {
   background-color: #638c26;
   color: #eff7ff;
-  box-shadow: 0 0 10px #9f86c0;
+  box-shadow: 0 0 20px #9f86c0;
+  border: 5px solid #eff7ff;
+  outline: 3px solid #638c26;
   text-shadow: 0px 0px 6px #82204a;
   width: 40vw;
   height: 50vh;
