--- a/src/app/menu/[user]/styles.scss
+++ b/src/app/menu/[user]/styles.scss
@@ -10,9 +10,8 @@
   border-radius: 2%;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+
   align-items: center;
-  gap: 2vh;
   padding: 3vh;
 
   & > form {
@@ -54,6 +53,7 @@
 
 button {
   width: 5vw;
+  min-width: 80px;
   height: 3vh;
   background-color: #231123;
   color: #eff7ff;
@@ -73,5 +73,10 @@ button {
   & svg {
     transform: scale(1.4);
     filter: invert(100%);
+  }
+}
+@media only screen and (max-width: 600px) {
+  .speed {
+    flex-direction: column;
   }
 }
