--- a/src/app/game/[user]/styles.scss
+++ b/src/app/game/[user]/styles.scss
@@ -14,37 +14,6 @@
   align-items: center;
   gap: 2vh;
   padding: 3vh;
-
-  & > form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    & > div {
-      gap: 1vh;
-      margin: 4vh;
-      display: flex;
-      flex-direction: column;
-
-      & > p {
-        text-align: center;
-        margin: 1vh;
-        text-decoration: underline;
-      }
-      & > div {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        & > div {
-          margin: 1vh;
-          display: flex;
-          gap: 0.5vh;
-        }
-      }
-    }
-  }
 }
 
 .board {
@@ -151,6 +120,7 @@
   width: 72vw;
   left: 14vw;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   gap: 5vw;
