Fix minor responsiveness issues

--- a/src/app/game/[user]/styles.scss
+++ b/src/app/game/[user]/styles.scss
@@ -35,7 +35,7 @@
 }
 
 .tile {
-  background-color: #231123;
+  background-color: #fdfdfdd2;
 }
 
 .snake {
@@ -78,7 +78,7 @@
 }
 
 .active {
-  background-color: #9f86c0;
+  background-color: #9f86c099;
 }
 
 .top {
