--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -1,6 +1,6 @@
 nav {
   width: 100%;
-  height: 3vh;
+  height: max(3vh, 40px);
   border-bottom: 3px solid #231123;
   box-shadow: 2px 0 5px #82204a;
   display: flex;
@@ -14,7 +14,7 @@ nav {
     align-items: center;
     justify-content: center;
     & h2 {
-      font-size: 1rem;
+      font-size: max(1rem, 16px);
     }
   }
 }
